fixed logout on mobile

--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -68,6 +68,7 @@
 }
 
 .nav-links-mobile {
+  cursor: 'pointer';
   display: none;
 }
 
